@@ -1,1 +1,2 @@
 flash-kernel
+partman-uboot
