@@ -275,6 +275,8 @@ class Page(Plugin):
 
         if fs in ('fat16', 'fat32', 'ntfs'):
             question = 'partman-basicfilesystems/fat_mountpoint'
+        elif fs in ('uboot'):
+            question = 'partman-uboot/mountpoint' 
         else:
             question = 'partman-basicfilesystems/mountpoint'
         choices_c = self.choices_untranslated(question)
